# CompilanceQA

./: README.md
.circleci/: config.yml
CompilanceQAPipeline/: .env  README.md  main.py  pyproject.toml  requirements.txt
CompilanceQAPipeline/backend/scripts/: index_documents.py
CompilanceQAPipeline/backend/src/api/: server.py
CompilanceQAPipeline/backend/src/graph/: node.py  state.py  workflow.py
CompilanceQAPipeline/backend/src/services/: video_indexer.py
